--- a/huoyinghui.html
+++ b/huoyinghui.html
@@ -42,22 +42,22 @@
             </div>
             <div class="row projects">
                 <div class="col-lg-6 col-sm-6 item">
-                	  	<h3 class="name">CET4</h3>
+                	  	<h3 class="name"><a href="assets/img/cet4.jpg">CET4</a></h3>
                 		<img class="img-responsive" src="assets/img/cet4.jpg">
                     <p class="description"></p>
                 </div>
                 <div class="col-lg-6 col-sm-6 item">
-                	 	<h3 class="name">CET6</h3>
+                	 	<h3 class="name"><a href="assets/img/cet6.jpg">CET6</a></h3>
                 		<img class="img-responsive" src="assets/img/cet6.jpg">
                     <p class="description"></p>
                 </div>
                  <div id="rotate" class="col-lg-12 col-sm-12 item">
-                	 	<h3 class="name">Degree</h3>
+                	 	<h3 class="name"><a href="assets/img/degree_certificate.jpg">Degree</a></h3>
                 		<img class="img-responsive" src="assets/img/degree_certificate.jpg">
                     <p class="description"></p>
                 </div>
                 <div class="col-lg-12 col-sm-12 item">
-                	 	<h3 class="name">Graduation</h3>
+                	 	<h3 class="name"><a href="assets/img/graduation_certificate.jpg">Graduation</a></h3>
                 		<img class="img-responsive" src="assets/img/graduation_certificate.jpg">
                     <p class="description"></p>
                 </div>
